--- a/Actitime/test-output/old/Default suite/reporter-output.html
+++ b/Actitime/test-output/old/Default suite/reporter-output.html
@@ -2,6 +2,6 @@
 <tr><td>login</td></tr>
 <tr><td>HDFC_001</td></tr>
 <tr><td>Banking Project</td></tr>
+<tr><td>listner-taking screenshot</td></tr>
 <tr><td>logout</td></tr>
-<tr><td>close-Browser</td></tr>
 </table>
